# awesomecalculator

.github/workflows/: build-pipeline.yml  pyproject.toml
