<!DOCTYPE html>
<html><head></head><body style="color: rgb(32, 33, 34); font-family: arial, helvetica, sans-serif; font-size: 12px;"><div data-olk-copy-source="MessageBody"># pyproject.toml</div>
<div></div>
<div>[project]</div>
<div>name = "Nathan_Bonnar-awesomecalculator"</div>
<div>version = "1.0.0"</div>
<div>description = "Calc stuff"</div>
<div>readme = "README.md"</div>
<div>authors = [{ name = "Nathan Bonnar", email = "Nbonnar3405@conestogac.on.ca" }]</div>
<div>license = { file = "LICENSE" }</div>
<div>classifiers = [</div>
<div>&nbsp; &nbsp; "License :: OSI Approved :: MIT License",</div>
<div>&nbsp; &nbsp; "Programming Language :: Python",</div>
<div>&nbsp; &nbsp; "Programming Language :: Python :: 3",</div>
<div>]</div>
<div>keywords = ["feed", "reader", "tutorial"]</div>
<div>dependencies = [</div>
<div>&nbsp; &nbsp; 'tomli; python_version &lt; "3.12"'</div>
<div>]</div>
<div>requires-python = "&gt;=3.12"</div>
<div></div>
<div>[project.optional-dependencies]</div>
<div>dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]</div>
<div></div>
<div>[project.urls]</div>
<div>Homepage = "<a href="https://github.com/Nathan-Bonnar/awesomecalculator.git">https://github.com/Nathan-Bonnar/awesomecalculator.git</a>"</div>
<div></div>
<div>[project.scripts]</div>
<div>realpython = "reader.__main__:main"</div></body></html>